options: Fix alignment of advanced `<ul>`s

--- a/styles/mods-options.less
+++ b/styles/mods-options.less
@@ -61,7 +61,8 @@ main:not(.show-advanced) .advanced { display: none; }
     background-color: var(--advanced-bg);
     border-radius: calc(var(--ctrl-border-radius) / 2);
     box-shadow: 0 0 0 var(--ctrl-border-radius) var(--advanced-bg);
-    margin: calc(var(--ctrl-mh) + var(--ctrl-border-radius)) 0;
+    margin-top: calc(var(--ctrl-mh) + var(--ctrl-border-radius));
+    margin-bottom: calc(var(--ctrl-mh) + var(--ctrl-border-radius));
 }
 
 .feature-flag {
